<resources>
    <string name="app_name">Philosophy Quiz</string>
    <string name="question">Question</string>
    <string name="play_again">Play again</string>
    <string name="time" translatable="false">15</string>
    <string name="correct">Correct</string>
    <string name="wrongans">Opps the ans was wrong</string>
    <string name="timeup">Time Up</string>
    <string name="play_game">Play Game</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="cancel" translatable="false">✖</string>
    <string name="return_the_main_menu">Return the main menu</string>
    <string name="score">Score:</string>
    <string name="please_enter_all_field">Please enter all field</string>
    <string name="score_main">Score</string>
    <string name="add_your_question">Add your question</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_a">Answer A</string>
    <string name="please_enter_your_answers_options_to_your_question">Please enter your answers options to your question</string>
    <string name="please_enter_your_question">Please enter your question</string>
    <string name="your_question">Your question</string>
    <string name="answer_d">Answer D</string>
    <string name="add">Add</string>
    <string name="please_select_the_correct_answer">Please select the correct answer</string>
</resources>
