<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fantastic.philosophyQuiz.activity.kotlin.TimeUpActivity">

    <TextView
        android:id="@+id/timeUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/timeup"
        android:textColor="@color/red"
        android:textSize="30sp" />
<ImageView
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:src="@drawable/timer"
    />


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

    <info.hoang8f.widget.FButton
        android:id="@+id/playAgainButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        fbutton:buttonColor="@color/lightGreen" />

    <Button
        android:id="@+id/retutn_button_time_up"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/return_the_main_menu"
        android:focusable="true"
        android:background="@color/colorAccent"/>
</LinearLayout>
