<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wrongAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wrongans"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/wrongans" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/score"
            android:textColor="@color/green"
            android:textSize="40sp"
            fbutton:layout_constraintBottom_toBottomOf="parent"
            fbutton:layout_constraintEnd_toEndOf="parent"
            fbutton:layout_constraintStart_toStartOf="parent"
            fbutton:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="20"
            android:textSize="40sp"
            fbutton:layout_constraintBottom_toBottomOf="parent"
            fbutton:layout_constraintStart_toEndOf="@+id/textView2"
            fbutton:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/playAgainButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/retutn_button"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/return_the_main_menu"
        android:focusable="true"
        android:background="@color/colorAccent"/>

</LinearLayout>