<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context="fantastic.philosophyQuiz.activity.java.HomeScreenActivity">

    <TextView
        android:id="@+id/tQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp"
        fbutton:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:elevation="10dp"
        android:src="@drawable/emb"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/tQ" />

    <ImageView
        android:id="@+id/changeLanguage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_language_black_24dp"
        android:visibility="invisible"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/imageView" />

    <info.hoang8f.widget.FButton
        android:id="@+id/playGame"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/play_game"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/changeLanguage" />

    <info.hoang8f.widget.FButton
        android:id="@+id/score_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/score_main"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintHorizontal_bias="0.505"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/add_question_button" />

    <info.hoang8f.widget.FButton
        android:id="@+id/add_question_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_your_question"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintHorizontal_bias="0.494"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/playGame" />

    <info.hoang8f.widget.FButton
        android:id="@+id/quit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/quit"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintHorizontal_bias="0.505"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/score_button" />

</android.support.constraint.ConstraintLayout>
